Refactorización del código y agregación de funciones adicionales como audio y cuadro de diálogo de FPS

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shatter Force</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <title>Shadow Wizard - HTML5 Canvas Game</title>
+    <meta name="description" content="Shadow Wizard - Un juego de plataformas 2D side-scrolling desarrollado con HTML5 Canvas">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <canvas id="gameCanvas"></canvas>
 
+    <!-- HUD -->
     <div id="hud" class="hidden">
-
         <div id="hudLives">
             <span id="livesContainer"></span>
         </div>
@@ -26,25 +29,29 @@
                 Puntaje: <span id="scoreValue">0</span>
             </div>
             <button id="missionsButton" class="ui-button small">Misiones (M)</button>
+            <button id="muteButton" class="ui-button small">🔊</button>
         </div>
-
     </div>
 
+    <!-- Panel de Misiones -->
     <div id="missionsPanel" class="ui-panel hidden">
-        <h4>Misiones del Nivel 1</h4>
-        <ul>
-            <li>Encuentra la salida.</li>
-            <li>Derrota a 3 enemigos.</li>
-            <li>Consigue 100 puntos.</li>
-        </ul>
+        <h4 id="missionsPanelTitle">Misiones del Nivel</h4>
+        <ul id="missionsList"></ul>
         <button id="closeMissionsButton" class="ui-button small">Cerrar</button>
     </div>
 
+    <!-- Pantalla de Título -->
     <div id="titleScreen" class="ui-screen">
-        <h1 class="game-title">Shatter Force</h1>
+        <h1 class="game-title">Shadow Wizard</h1>
+        <p class="subtitle">HTML5 Canvas Game</p>
+        <div class="high-score-display">
+            High Score: <span id="highScoreValue">0</span>
+        </div>
         <button id="playButton" class="ui-button">Jugar</button>
+        <p class="credits">Por Luis Morocho y Mark Hernández</p>
     </div>
 
+    <!-- Selección de Nivel -->
     <div id="levelSelectScreen" class="ui-screen hidden">
         <h2 class="screen-title">Seleccionar Nivel</h2>
         <div class="level-buttons">
@@ -55,6 +62,7 @@
         <button id="backToTitleButton" class="ui-button small">Volver</button>
     </div>
 
+    <!-- Pantalla de Pausa -->
     <div id="pauseScreen" class="ui-screen hidden">
         <h2 class="screen-title">Pausa</h2>
         <button id="resumeButton" class="ui-button">Reanudar</button>
@@ -62,11 +70,13 @@
         <button id="pauseBackToMenuButton" class="ui-button small">Volver al Menú</button>
     </div>
 
+    <!-- Game Over -->
     <div id="gameOverScreen" class="ui-screen hidden">
         <h2 class="screen-title game-over-title">Game Over</h2>
         <button id="gameOverBackToMenuButton" class="ui-button">Volver al Menú</button>
     </div>
 
+    <!-- Nivel Completado -->
     <div id="levelCompleteScreen" class="ui-screen hidden">
         <h2 class="screen-title">¡Nivel Completado!</h2>
 
@@ -77,20 +87,44 @@
         </div>
 
         <div id="missionResults">
-            <p id="result-enemies">Enemigos derrotados: 0 / 3</p>
-            <p id="result-score">Puntaje obtenido: 0 / 100</p>
+            <p id="result-enemies">Enemigos derrotados: 0 / 5</p>
+            <p id="result-score">Puntaje obtenido: 0 / 250</p>
         </div>
 
         <button id="nextLevelButton" class="ui-button">Siguiente Nivel</button>
         <button id="levelCompleteBackToMenuButton" class="ui-button small">Menú Principal</button>
     </div>
 
-    <script src="platforms.js"></script>
-    <script src="enemy.js"></script>
+    <!-- ENGINE: Sistema base -->
+    <script src="engine/SpriteSheet.js"></script>
+    <script src="engine/Entity.js"></script>
+    <script src="engine/Camera.js"></script>
     <script src="engine/loader.js"></script>
     <script src="engine/stateManager.js"></script>
-    <script src="game/arcade/arcade.js"></script>
 
+    <!-- GAME: Plataformas -->
+    <script src="game/levels/Platform.js"></script>
+
+    <!-- GAME: Entidades -->
+    <script src="game/entities/Items.js"></script>
+    <script src="game/entities/Enemy.js"></script>
+    <script src="game/entities/Player.js"></script>
+
+    <!-- GAME: Sistemas -->
+    <script src="game/systems/Background.js"></script>
+    <script src="game/systems/ProjectileSystem.js"></script>
+    <script src="game/systems/AudioManager.js"></script>
+    <script src="game/systems/SaveManager.js"></script>
+    <script src="game/systems/TouchControls.js"></script>
+    <script src="game/systems/PerformanceMonitor.js"></script>
+
+    <!-- GAME: Niveles -->
+    <script src="game/levels/LevelManager.js"></script>
+
+    <!-- GAME: Clase principal -->
+    <script src="game/Game.js"></script>
+
+    <!-- MAIN: Punto de entrada -->
     <script src="main.js"></script>
 </body>
 
